@@ -89,7 +89,7 @@ local process_migration = {
         table.insert(storage.trades.starting_trades, {{"copper-cable", "boiler"}, {"wood", "raw-fish"}})
         local trade = trades.from_item_names("nauvis", {"copper-cable", "boiler"}, {"wood", "raw-fish"})
         local starter_hex_state = hex_grid.get_hex_state("nauvis", {q=0, r=0})
-        hex_grid.remove_trade(starter_hex_state, 4)
+        hex_grid.remove_trade_by_index(starter_hex_state, 4)
         hex_grid.add_trade(starter_hex_state, trade)
 
         -- Revert trades to original
@@ -190,7 +190,7 @@ local process_migration = {
         local mgs_original = {autoplace_controls = {coal = {frequency = 1, richness = 1, size = 1}, ["copper-ore"] = {frequency = 1, richness = 1, size = 1}, ["crude-oil"] = {frequency = 1, richness = 1, size = 1}, ["enemy-base"] = {frequency = 1, richness = 1, size = 1}, ["iron-ore"] = {frequency = 1, richness = 1, size = 1}, nauvis_cliff = {frequency = 1, richness = 1, size = 1}, rocks = {frequency = 1, richness = 1, size = 1}, starting_area_moisture = {frequency = 1, richness = 1, size = 1}, stone = {frequency = 1, richness = 1, size = 1}, trees = {frequency = 1, richness = 1, size = 1}, ["uranium-ore"] = {frequency = 1, richness = 1, size = 1}, water = {frequency = 1, richness = 1, size = 1}}, autoplace_settings = {decorative = {settings = {["brown-asterisk"] = {frequency = 1, richness = 1, size = 1}, ["brown-asterisk-mini"] = {frequency = 1, richness = 1, size = 1}, ["brown-carpet-grass"] = {frequency = 1, richness = 1, size = 1}, ["brown-fluff"] = {frequency = 1, richness = 1, size = 1}, ["brown-fluff-dry"] = {frequency = 1, richness = 1, size = 1}, ["brown-hairy-grass"] = {frequency = 1, richness = 1, size = 1}, ["cracked-mud-decal"] = {frequency = 1, richness = 1, size = 1}, ["dark-mud-decal"] = {frequency = 1, richness = 1, size = 1}, garballo = {frequency = 1, richness = 1, size = 1}, ["garballo-mini-dry"] = {frequency = 1, richness = 1, size = 1}, ["green-asterisk"] = {frequency = 1, richness = 1, size = 1}, ["green-asterisk-mini"] = {frequency = 1, richness = 1, size = 1}, ["green-bush-mini"] = {frequency = 1, richness = 1, size = 1}, ["green-carpet-grass"] = {frequency = 1, richness = 1, size = 1}, ["green-croton"] = {frequency = 1, richness = 1, size = 1}, ["green-desert-bush"] = {frequency = 1, richness = 1, size = 1}, ["green-hairy-grass"] = {frequency = 1, richness = 1, size = 1}, ["green-pita"] = {frequency = 1, richness = 1, size = 1}, ["green-pita-mini"] = {frequency = 1, richness = 1, size = 1}, ["green-small-grass"] = {frequency = 1, richness = 1, size = 1}, ["light-mud-decal"] = {frequency = 1, richness = 1, size = 1}, ["medium-rock"] = {frequency = 1, richness = 1, size = 1}, ["medium-sand-rock"] = {frequency = 1, richness = 1, size = 1}, ["red-asterisk"] = {frequency = 1, richness = 1, size = 1}, ["red-croton"] = {frequency = 1, richness = 1, size = 1}, ["red-desert-bush"] = {frequency = 1, richness = 1, size = 1}, ["red-desert-decal"] = {frequency = 1, richness = 1, size = 1}, ["red-pita"] = {frequency = 1, richness = 1, size = 1}, ["sand-decal"] = {frequency = 1, richness = 1, size = 1}, ["sand-dune-decal"] = {frequency = 1, richness = 1, size = 1}, ["small-rock"] = {frequency = 1, richness = 1, size = 1}, ["small-sand-rock"] = {frequency = 1, richness = 1, size = 1}, ["tiny-rock"] = {frequency = 1, richness = 1, size = 1}, ["white-desert-bush"] = {frequency = 1, richness = 1, size = 1}}, treat_missing_as_default = true}, entity = {settings = {["big-rock"] = {frequency = 1, richness = 1, size = 1}, ["big-sand-rock"] = {frequency = 1, richness = 1, size = 1}, coal = {frequency = 1, richness = 1, size = 1}, ["copper-ore"] = {frequency = 1, richness = 1, size = 1}, ["crude-oil"] = {frequency = 1, richness = 1, size = 1}, fish = {frequency = 1, richness = 1, size = 1}, ["huge-rock"] = {frequency = 1, richness = 1, size = 1}, ["iron-ore"] = {frequency = 1, richness = 1, size = 1}, stone = {frequency = 1, richness = 1, size = 1}, ["uranium-ore"] = {frequency = 1, richness = 1, size = 1}}, treat_missing_as_default = true}, tile = {settings = {deepwater = {frequency = 1, richness = 1, size = 1}, ["dirt-1"] = {frequency = 1, richness = 1, size = 1}, ["dirt-2"] = {frequency = 1, richness = 1, size = 1}, ["dirt-3"] = {frequency = 1, richness = 1, size = 1}, ["dirt-4"] = {frequency = 1, richness = 1, size = 1}, ["dirt-5"] = {frequency = 1, richness = 1, size = 1}, ["dirt-6"] = {frequency = 1, richness = 1, size = 1}, ["dirt-7"] = {frequency = 1, richness = 1, size = 1}, ["dry-dirt"] = {frequency = 1, richness = 1, size = 1}, ["grass-1"] = {frequency = 1, richness = 1, size = 1}, ["grass-2"] = {frequency = 1, richness = 1, size = 1}, ["grass-3"] = {frequency = 1, richness = 1, size = 1}, ["grass-4"] = {frequency = 1, richness = 1, size = 1}, ["red-desert-0"] = {frequency = 1, richness = 1, size = 1}, ["red-desert-1"] = {frequency = 1, richness = 1, size = 1}, ["red-desert-2"] = {frequency = 1, richness = 1, size = 1}, ["red-desert-3"] = {frequency = 1, richness = 1, size = 1}, ["sand-1"] = {frequency = 1, richness = 1, size = 1}, ["sand-2"] = {frequency = 1, richness = 1, size = 1}, ["sand-3"] = {frequency = 1, richness = 1, size = 1}, water = {frequency = 1, richness = 1, size = 1}}, treat_missing_as_default = true}}, cliff_settings = {cliff_elevation_0 = 10, cliff_elevation_interval = 40, cliff_smoothing = 0, control = "nauvis_cliff", name = "cliff", richness = 1}, default_enable_all_autoplace_controls = false, height = 2000000, no_enemies_mode = false, peaceful_mode = false, property_expression_names = {}, seed = 805764077, starting_area = 1, starting_points = {{x = 0, y = 0}}, width = 2000000}
 
         storage.hex_grid.mgs.nauvis = mgs_original
-        
+
         storage.hex_grid.resource_weighted_choice.nauvis = {}
         storage.hex_grid.resource_weighted_choice.nauvis.resources = weighted_choice.new {
             ["iron-ore"] = mgs_original.autoplace_controls["iron-ore"].size * 6,
@@ -209,6 +209,16 @@ local process_migration = {
         blueprints.init()
 
         storage.trades.starting_trades = data_trades.starting_trades
+
+        for surface_id, _ in pairs(game.surfaces) do
+            for _, state in pairs(hex_grid.get_flattened_surface_hexes(surface_id)) do
+                if state.trades then
+                    for _, trade in pairs(state.trades) do
+                        trades.add_trade_to_tree(trade)
+                    end
+                end
+            end
+        end
     end,
     ["0.3.0"] = function()
     end,
